<resources>
    <string name="app_name">ERP</string>
    <string name="retry_click_btn">Touch again</string>
    <string name="some_problem_error">There is a problem. Try again</string>
    <string name="connection_problem">Not connecting to the server</string>
    <string name="support_call">Contact support</string>
    <string name="retry">Retry</string>
    <string name="check_connection">Please check your device connection to the Internet</string>
    <string name="setting">setting</string>
    <string name="server_configs">Server settings</string>
    <string name="server_configs_detail">Enter IP, port, and other server settings from here</string>
    <string name="language_configs">Language settings</string>
    <string name="language_configs_detail">Set the application display language</string>
    <string name="theme_configs">shell settings</string>
    <string name="theme_configs_detail">Customize the appearance of the program</string>
    <string name="dot">.</string>
    <string name="IP_hint">IP</string>
    <string name="ok">Confirm</string>
    <string name="sync_data">Please check the unSynced data</string>
    <string name="caution">Warning</string>
    <string name="cancel">Cancel</string>
    <string name="clear_data_caution">All your data will be deleted, will you continue?</string>
    <string name="persian">فارسی</string>
    <string name="english">English</string>
    <string name="arabic">العربیه</string>
    <string name="new_version">new version</string>
    <string name="have_new_version">new version of app is available</string>
    <string name="username">userName</string>
    <string name="organization">Organization</string>
    <string name="password">PassWord</string>
    <string name="login">login</string>
    <string name="loading">loading…</string>
    <string name="guest_user">guest user</string>
    <string name="all">All</string>
    <string name="press_again">press again please</string>
    <string name="empty_edit_text">this field is necessary</string>
    <string name="wrong_pass">password is wrong</string>
    <string name="corrupt_download_caution">Downloads were not be completed</string>
    <string name="downloading">downloading…</string>
    <string name="saving">add to database…</string>
    <string name="done">done</string>
    <string name="error">error!</string>
    <string name="preparing">preparing…</string>
    <string name="nothing_selected">nothing were selected</string>
    <string name="wrong_Input">input parameters are wrong</string>
    <string name="wait">pleas wait …</string>
    <string name="camera">camera</string>
    <string name="gallery">gallery</string>
    <string name="record_voice">recordVoice</string>
    <string name="location">location</string>
    <string name="file">file</string>
    <string name="contact">contact</string>
    <string name="not_have_access">You do not have access to this action</string>
    <string name="access_permission">access permissions</string>
    <string name="access_permission_message">The software requires some permissions to function properly. These accesses are completely confidential and personal information of users will be reserved</string>
    <string name="dear_user">Dear user</string>
    <string name="search">search</string>
    <string name="sure_selection">Are you sure about your selections ?</string>
    <string name="refine">reFine</string>
    <string name="help_one_location_map">adjust your location by moving the map and click on marker finally</string>
    <string name="help_more_location_map">long click on map for add locations</string>
    <string name="multi_location">multi locations</string>
    <string name="destinations">destination</string>
    <string name="delete">delete</string>
    <string name="not_enugh_location_error">please select more location</string>
    <string name="calendar_configs">calendar setting</string>
    <string name="calendar_configs_detail">set type of your calendar</string>
    <string name="hijri">hijri</string>
    <string name="gregorian">Gregorian</string>
    <string name="please_select">please select</string>
    <string name="start_date">start date</string>
    <string name="end_date">end date</string>
    <string name="work_duration">work duration</string>
    <string name="project">project</string>
    <string name="service_type">service type</string>
    <string name="project_components">project components</string>
    <string name="daily_schedule">daily schedule</string>
    <string name="wage_title">wage title</string>
    <string name="description">description</string>
    <string name="date_after_now_error">you can not set time after now</string>
    <string name="start_date_after_end_date_error">you can not set start time after end date</string>
    <string name="end_date_before_start_date_error">you can not set date before start date</string>
    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="and">and</string>
    <string name="task">task</string>
    <string name="comment">write a comment</string>
    <string name="write_description">write your description</string>
    <string name="date_before_now_error">you can not set date before now</string>
    <string name="proper_sheet_plane_duration_error">The start and end time intervals must be between five minutes and twenty hours</string>
    <string name="mock_app_error">please cleare the apps that mock your location</string>
    <string name="forbidden_app_error">you use some forbidden apps</string>
    <string name="synchronous">synchronous</string>
    <string name="asynchronous">asynchronous</string>
    <string name="fill_proper_value">select  appropriate amount</string>
    <string name="save_data_success">data were saved successfully</string>
    <string name="tag">tag</string>
    <string name="subject">subject</string>
    <string name="dead_line">dead line</string>
    <string name="operator">operator</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="reference">reference</string>
    <string name="priority">priority</string>
    <string name="task_type">task type</string>
    <string name="date_after_financial_year">you can not set date after current financial date</string>
    <string name="no_deveiceid_error">you dont have device id, please restart Application</string>
    <string name="task_sync_error">your task were not synced by server</string>
    <string name="error_number">error number: </string>
    <string name="status">statuse</string>
    <string name="no_attach_selected">error attachments selection</string>
    <string name="finish">finish work</string>
    <string name="next_item">next item</string>
    <string name="main_number">main number</string>
    <string name="sub_number">sub number</string>
    <string name="no_goods_selected">no goods were be selected</string>
    <string name="good_name">good name</string>
    <string name="good_main_unit_name">good main unit name</string>
    <string name="please_set_proper_main_value">please set proper main value</string>
    <string name="no_barcode_selected">get barcode error</string>
    <string name="counting_number">counting number</string>
    <string name="date_out_financial_date">you can not set date out of financial date</string>
    <string name="sync_progress">syncing…please wait</string>
    <string name="sync_progress2">you can not leave</string>
    <string name="sync_progress3">until work were be done</string>
    <string name="sync_data_were_done">sync data were done</string>
    <string name="normal">normal</string>
    <string name="New">new</string>
    <string name="deleted">deleted</string>
    <string name="access_denied">access denied</string>
    <string name="cartable_report">cartable report</string>
    <string name="edited">edited</string>
    <string name="home">home</string>
    <string name="sync">sync</string>
    <string name="cardable">cardable</string>
    <string name="chat">chat</string>
    <string name="online">online</string>
    <string name="sync_state_message">Touch the confirmation button and check internet connection to check the server response and resubmit the unSynced data</string>
    <string name="task_report">task report</string>
    <string name="time_report">time report</string>
    <string name="weiging_report">weighing report</string>
    <string name="good_trans_number">transference number</string>
    <string name="good_trans_date">good transe date</string>
    <string name="driver_name">driver name</string>
    <string name="empty_weight">empty weight</string>
    <string name="buyer_name">buyer</string>
    <string name="good_trans_weight">good transe weight</string>
    <string name="sum_weight">sum weight</string>
    <string name="balance_weight">balance weight</string>
    <string name="empty_date">empty date</string>
    <string name="warehousing_report">warehouse handling report</string>
    <string name="iran">ایران</string>
    <string name="goods_report">goods report</string>
    <string name="brand">brand</string>
    <string name="filter">filter</string>
    <string name="change_lay">change layout</string>
    <string name="pleaseSetupServerConfig">please setup server config</string>
    <string name="delete_apk">please delete APK file from faraERP folder manualy</string>
    <string name="download">download</string>
    <string name="download_new_apk">ERP download new version</string>
    <string name="sync_upload_data">upload attachment is in process …please try after finish it</string>
    <string name="attach_albom">Album</string>
    <string name="logout">logout</string>
    <string name="logout_message">Are you sure about logging out? (you need internet access)</string>
    <string name="wait_for_logout">please confirm for send logout message</string>
    <string name="zero">0</string>
    <string name="about_me">about me</string>
    <string name="barcode">barcode</string>
    <string name="serial_search">serial search</string>
    <string name="search_goods">search goods</string>
    <string name="open_application">Open application</string>
    <string name="warehousing">Warehouse Handling</string>
    <string name="save_data_error">error … !  error code =</string>
    <string name="please_set_proper_sub_value">please set proper sub value</string>
    <string name="exit_from_app">exit application</string>
    <string name="good_code">good code</string>
    <string name="warehouse_code">warehouse code</string>
    <string name="amount">amount</string>
    <string name="good_main_palce_layer">place layer</string>
    <string name="good_main_shelf_sub_row">shelf sub row</string>
    <string name="good_main_shelf_row">shelf row</string>
    <string name="serial">serial</string>
    <string name="node_server_is_disconnected">messaging server not in response</string>
    <string name="save">save</string>
    <string name="backup">make backup</string>
    <string name="backUp_data_success">data were be backed up successfully</string>
    <string name="chatlist">chat lists</string>
    <string name="upload_files">ERP upload files is in process</string>
    <string name="uploading">uploading…</string>
    <string name="sender">sender</string>
    <string name="date">date</string>
    <string name="seen">seen</string>
    <string name="latinName">latin name</string>
    <string name="tech_info">technical information</string>
    <string name="nationality_code">nationalityCode</string>
    <string name="width">width</string>
    <string name="length">length</string>
    <string name="weight">weight</string>
    <string name="select_calander_type">select calendar type</string>
    <string name="get_app_configs">get app configs</string>
    <string name="night_mode">night/day mode</string>
    <string name="help">help</string>
</resources>