<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/drawer_main_menu_sync"
        android:title="@string/sync"
        android:icon="@drawable/ic_sync" />

    <item
        android:id="@+id/drawer_main_menu_backup"
        android:title="@string/backup"
        android:icon="@drawable/ic_database_backup" />

    <item
        android:id="@+id/drawer_main_menu_night_mode"
        android:title="@string/night_mode"
        android:icon="@drawable/ic_night_mode" />

    <item
        android:id="@+id/drawer_main_menu_get_config"
        android:icon="@drawable/ic_setting"
        android:title="@string/get_app_configs" />

    <item
        android:id="@+id/drawer_main_menu_logout"
        android:icon="@drawable/ic_sign_out"
        android:title="@string/logout" />

    <item
        android:id="@+id/drawer_main_menu_help"
        android:icon="@drawable/ic_help_circle"
        android:title="@string/help" />

    <item
        android:id="@+id/drawer_main_menu_about"
        android:title="@string/about_me"
        android:icon="@drawable/ic_help" />

    <item
        android:id="@+id/drawer_main_menu_support"
        android:icon="@drawable/ic_support"
        android:title="@string/support_call" />


</menu>