<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/constraint_layout_style"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dialoge_height">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/twoLineGrayText_description_dialog_style"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/select_calander_type"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toTopOf="@+id/btn_hijri_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_hijri_calendar"
        style="@style/oneLinePrimaryText_style_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/hijri"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toTopOf="@+id/btn_gregorian_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_gregorian_calendar"
        style="@style/oneLinePrimaryText_style_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/gregorian"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>