<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/constraint_layout_style_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        style="@style/scroll_view_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_confirm_description_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.85">

        <LinearLayout
            style="@style/linear_layout_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                style="@style/img_style0"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_view_height"
                android:layout_margin="@dimen/margin1"
                app:srcCompat="@drawable/ic_attachment" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/material_edit_text_border"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_view_height">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_tag_description_layout"
                    style="@style/material_edit_text_inner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/tag" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/material_edit_text_border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_description_description_layout"
                    style="@style/material_edit_text_inner_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/description" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </ScrollView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm_description_layout"
        style="@style/btn_style_1"
        android:layout_width="0dp"
        android:layout_height="@dimen/login_view_height"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>