<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/constraint_layout_style"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/constraint_layout_style"
        android:layout_width="0dp"
        android:layout_height="@dimen/toolbar_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_delete_global_confirm_cancel_delete_btns"
            style="@style/btn_style_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/delete"
            android:visibility="visible"
            app:autoSizeTextType="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.33"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/constraint_layout_style"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_delete_global_confirm_cancel_delete_btns"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_confirm_global_confirm_cancel_delete_btns"
                style="@style/btn_style_1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/ok"
                app:autoSizeTextType="none"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.5" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel_global_confirm_cancel_delete_btns"
                style="@style/btn_style_2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/cancel"
                app:autoSizeTextType="none"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_confirm_global_confirm_cancel_delete_btns"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>